Added a Vagrant box (for testing) and updated a few of the meta files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # --------------------------------------- #
-#    Luke's Universal GIT Ignore File     #
+#    C2C's Universal GIT Ignore File      #
 # - - - - - - - - - - - - - - - - - - - - #
 #  Version  : 1.2                         #
 #  Author   : Luke Chavers                #
